<resources>
    <string name="app_name">app-calendario</string>

    <!--Main activity-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!--activity registro-->
    <string name="CrearCuenta">Crear una Cuenta</string>
    <string name="NombreEt">Nombre</string>
    <string name="CorreoEt">Correo Electrónico</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarContraseña">Confirmar Contraseña</string>
    <string name="RegistaraUsuario">Registrar Usuario</string>
    <string name="TengounaCuenta">Tengo una Cuenta</string>

    <!--Menu Principal-->
    <string name="CerrarSesion">Salir</string>

    <!--activity Login-->
    <string name="IniciarSesion">Iniciar Sesion</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="UsuarioNuevo">No tengo cuenta. Registrame</string>

    <!--mMenu principal-->
    <string name="BienvenidoPrincipal">Bienvenido (a)</string>
    <string name="NombrePrincipal"> * * </string>
    <string name="CorreoPrincipal"> * * </string>

    <!--Agregar Horario personalizado-->
    <string name="uid_usuario">Usuario</string>
    <string name="correo_Usuario"> Correo de Usuario</string>
    <string name="fecha_hora_actual"> Fecha y hora actual</string>
    <string name="Titulo">Titulo</string>
    <string name="Descripcion">Descripción</string>
    <string name="calendario">Calendario</string>
    <string name="Fecha"> 00/00/0000 </string>
    <string name="Estado">No finalizado</string>

    <!--Agregar Evento-->
    <string name="guardar_evento">GUARDAR</string>
    <string name="cancelar_evento">CANCELAR</string>


</resources>