<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/coloPrimaryDark"
            app:cardUseCompatPadding="true"
            android:padding="0.2dp"
            app:cardCornerRadius="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:text="@string/BienvenidoPrincipal"
                    android:textColor="#fff"
                    android:fontFamily="@font/worksans"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"/>

                <!--Nombre-->

                <TextView
                    android:id="@+id/NombrePrincipal"
                    android:text="@string/NombrePrincipal"
                    android:textColor="#fff"
                    android:fontFamily="@font/worksans"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"/>

                <!--Correo-->
                <TextView
                    android:id="@+id/CorreoPrincipal"
                    android:text="@string/CorreoPrincipal"
                    android:textColor="#fff"
                    android:fontFamily="@font/worksans"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/CerrarSesion"
            android:text="@string/CerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>