<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantalla_de_carga">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="17dp"
        android:gravity="center"
        android:orientation="vertical">
        <!--Animacion-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="calendario.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />
        <!--Titulo-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/worksans"
            android:text="@string/app_name"
            android:textSize="30dp" />


        <Button
            android:id="@+id/Btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/worksans"
            android:onClick="crearcuenta"
            android:text="@string/Btn_Login" />

        <Button
            android:id="@+id/Btn_Registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/worksans"
            android:onClick="crearcuenta"
            android:text="@string/Btn_Registro" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>